# lps_drone_vicon

./: .gitignore  README.md
src/drone_control/: package.xml  setup.py
src/drone_control/drone_control/: circle_planner.py  offboard_mode.py  rectangle_planner.py  setpoint_publisher.py  square_planner.py  vehicle_visual_pub.py  vicon_bridge.py
src/px4_ros_com/src/examples/offboard/: offboard_control.cpp
src/px4_ros_com/templates/: urtps_bridge_topics.yaml
src/vrpn_client_ros/config/: sample.params.yaml
